--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<h1>hello, world</h1>
 	<a href="about.html">About this project</a>
 	<p>Call me Ishmael.</p>
-	<img src="images/breaching_whale.jpg" alt="breaching_whale">
+	<a href="https://creativecommons.org/licenses/by-nd/2.0/"><img src="images/breaching_whale.jpg" alt="breaching_whale"></a>
 </body>
 </html>
